--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -2,7 +2,7 @@
 
 \noindent In this appendix, we explain our methodology to measure the projected differences in health outcomes and medical expenditure over the adult life for the treated and control groups in ABC/CARE.
 Health outcomes and behaviors of ABC/CARE subjects are measured at the age-30 interview and in a health follow-up conducted when the subjects were in their mid-30s.
-To project the life-cycle path of health outcomes and medical expenditures, we use a dynamic microsimulation model to track the treatment and control cohorts from age 30 until death.\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-America-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.} \\
+To project the life-cycle path of health outcomes and medical expenditures, we use a dynamic microsimulation model to track the treatment and control cohorts from age 30 until death.\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-America-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.} \\
 
 \noindent The defining characteristic of this approach is the modeling of real rather than synthetic cohorts, all of whom
 are followed at the individual level. This allows for more heterogeneity in behavior than would be allowed
