--- a/output/abc_compromises.tex
+++ b/output/abc_compromises.tex
@@ -4,32 +4,32 @@
 \label{table:abccompromises}
 \centering
 \footnotesize
-\begin{tabular}{cccc} \toprule
-Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
-Treatment & Left the study & None & Missing at random \\
-Treatment & Left the study & None & Missing at random \\
-Treatment & Left the study & None & Missing at random \\
-Treatment & Left the study & None & Missing at random \\ \midrule
-Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
-Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
-Treatment & Died (age 0), SIDS & Baseline; before dead & Attrition after death \\
-Treatment  & Died (age 4), pedestrian accident & Baseline; before dead & Attrition after death \\ \midrule
-Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
-Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
-Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\ \midrule
-Control        & Crossover from control to treatment & Baseline; before age 8 & Attrition after age 8  \\ \midrule
-Treatment   & 3 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  
-Treatment &10 months of treatment &  Baseline; after age 2 & Same as treatment group  \\
-Treatment & 6 months of treatment &  Baseline; after age 2 & Same as treatment group  \\ 
-Treatment & 9 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  \midrule
-Control  & Left study at 54 months & Baseline; before 54 months & Attrition after 54 months \\ \midrule
- Treatment       & Developmentally delayed at 6 months & No data after diagnosis & Dropped (non-eligible) \\ 
-Treatment       & Developmentally delayed at 36 months & No data after diagnosis & Dropped (non-eligible) \\ \midrule
-Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8 \\ 
-Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
+\begin{tabular}{lcccc} \toprule
+Case & Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
+1& Treatment & Left the study & None & Missing at random \\
+2& Treatment & Left the study & None & Missing at random \\
+3& Treatment & Left the study & None & Missing at random \\
+4& Treatment & Left the study & None & Missing at random \\ \midrule
+5& Control  & Death (age 0), heart disease & Baseline; before dead & Attrition after death \\
+6&Control  & Death (age 0), heart disease & Baseline; before dead & Attrition after death \\
+7&Treatment & Death (age 0), SIDS & Baseline; before dead & Attrition after death \\
+8&Treatment  & Death (age 4), pedestrian accident & Baseline; before dead & Attrition after death \\ \midrule
+9&Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
+10&Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
+11&Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\ \midrule
+12&Control        & Crossover from control to treatment & Baseline; before age 8 & Attrition after age 8  \\ \midrule
+13&Treatment   & 3 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  
+14&Treatment &10 months of treatment &  Baseline; after age 2 & Same as treatment group  \\
+15&Treatment & 6 months of treatment &  Baseline; after age 2 & Same as treatment group  \\ 
+16&Treatment & 9 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  \midrule
+17&Control  & Left study at 54 months & Baseline; before 54 months & Attrition after 54 months \\ \midrule
+18& Treatment       & Developmentally delayed at 6 months & No data after diagnosis & Dropped (non-eligible) \\ 
+19&Treatment       & Developmentally delayed at 36 months & No data after diagnosis & Dropped (non-eligible) \\ \midrule
+20&Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8 \\ 
+21&Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
-\item Note: This table describes the various randomization compromises in ABC. For each subject, we display: the nature of the compromise, the available data, and the methodological assumption when accounting for non-compliance and program attrition. 
+\item Note: This table describes the various randomization compromises in ABC. For each subject, we display: the nature of the compromise, the available data, and the methodological assumption when accounting for non-compliance and program attrition. The case numbers do not have anything to do with individual identifiers of program participants. 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
