--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -728,7 +728,7 @@ We also examine the sensitivity to (i) dropping the most costly crimes as murder
 
 The estimates are robust when we conduct a drastic sensitivity analysis by removing components of the benefit/cost analysis entirely (Table~\ref{table:cba}).\footnote{In Appendix~\ref{appendix:sensitivity}, we present exercises that are not as drastic as removing the whole component, but instead removing fractions of it.} Even when completely removing the gain associated with crime for males, the program is socially efficient. Both the internal rate of return and the benefit/cost ratio are substantial. Parental income and crime are the components for which the internal rate of return and the benefit/cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $21$ years of the children's life. Crime occurs later in life and its benefits are discounted accordingly. The amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit/cost ratio (but they remain statistically significant).
 
-\textit{Our sensitivity analyses indicates that it is not a single category of outcomes what drives the social efficiency of the program; it is the life-cycle benefits across various dimensions of human development.}
+\textit{Our sensitivity analyses indicate that it is not a single category of outcomes what drives the social efficiency of the program; it is the life-cycle benefits across various dimensions of human development.}
 
 \begin{table}[!htbp]
 \centering
